--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
         margin-right: 30px;
       }
     </style>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation-flex.css">
   </head>
   <body>
     <div id="app"></div>
