--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
       }
     </style>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation-flex.css">
+    <link rel="stylesheet" type="text/css" href="./assets/styles/styles.css">
   </head>
   <body>
     <div id="app"></div>
