Fix bug for stringify post request, fix bug in getPlayersByParams

--- a/public/index-layout.html
+++ b/public/index-layout.html
@@ -4,7 +4,7 @@
     <title>Sportify</title>
     <style media="screen">
       header {
-         border: 1px solid red;
+         border: 1px solid blue;
          margin-bottom: 20px;
       }
       header:after {
