--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.9.0/d3-legend.js'></script>
     <script type="application/javascript" src="./dist/bundle.js"></script>
   </body>
 </html>
