Add radarchart mockup

--- a/public/radar-graph.html
+++ b/public/radar-graph.html
@@ -346,8 +346,7 @@ var RadarChart = {
   	  .attr("y", function(d, i){ return i * 20 + 9;})
   	  .attr("font-size", "11px")
   	  .attr("fill", "#737373")
-  	  .text(function(d) { return d; })
-  	  ;
+  	  .text(function(d) { return d; });
 
   </script>
   </body>
