Refactor landing page

--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,7 @@
         margin-right: 30px;
       }
     </style>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation-flex.css">
-    <link rel="stylesheet" type="text/css" href="./assets/styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="../public/dist/css/styles.css">
   </head>
   <body>
     <div id="app"></div>
