Style the landing page

--- a/public/index.html
+++ b/public/index.html
@@ -2,47 +2,7 @@
 <html>
   <head>
     <title>Sportify</title>
-    <style media="screen">
-      header {
-         border: 1px solid red;
-         margin-bottom: 20px;
-      }
-      header:after {
-        display: table;
-        content: "";
-        clear: both;
-      }
-      table {
-        border: 1px solid black;
-        border-collapse: collapse !important;
-      }
-      td {
-        border: 1px solid black;
-      }
-      .center-content {
-        width: 960px;
-        margin: 0 auto;
-      }
-      .search-container {
-        margin-bottom: 30px;
-      }
-      .menu-btn {
-        float: left;
-        margin-right: 30px;
-        padding-top: 5px;
-      }
-      .menu-btn span {
-        border: 1px solid blue;
-        display: block;
-        margin-bottom: 5px;
-        width: 30px;
-      }
-      .login-btn {
-        float: right;
-        margin-right: 30px;
-      }
-    </style>
-    <link rel="stylesheet" type="text/css" href="../public/dist/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="./dist/css/styles.css">
   </head>
   <body>
     <div id="app"></div>
