Redesign nav menu and footer

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>Sportify</title>
     <link rel="stylesheet" type="text/css" href="./dist/css/styles.css">
   </head>
-  <body>
+  <body class="Site">
     <div id="app"></div>
     <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.9.0/d3-legend.js'></script> -->
     <script type="application/javascript" src="./dist/bundle.js"></script>
